--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "oradesignn",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
